event notification rework