@@ -1,10 +1,13 @@
 package it.pagopa.selfcare.dashboard.core.config;
 
 import freemarker.cache.URLTemplateLoader;
+import lombok.extern.slf4j.Slf4j;
 
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 
+@Slf4j
 class CloudTemplateLoader extends URLTemplateLoader {
     private URL root;
 
@@ -16,9 +19,9 @@ class CloudTemplateLoader extends URLTemplateLoader {
     @Override
     protected URL getURL(String template) {
         try {
-            return new URL(root, "/" + template);
-        } catch (MalformedURLException e) {
-
+            return root.toURI().resolve(template).toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
+            log.error(e.getMessage(), e);
         }
         return null;
     }
